--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -5,13 +5,13 @@
 
 <span id="about">
     
-    <section class="about bg-primary">
+    <section class="neutral-primary ">
         <div class="about-container">
         <div class="col-3 text--center">
             <img src="/static/1.jpg" alt="" class="details-img--ball"/>
         </div>
         <div class="col-7 details">
-            <h3>About Us</h3>
+            <h3>About Empco-Lite</h3>
             <p>Empco-Lite has been involved in the traffic safety industry since the 1960’s. Our goal is to provide
                 the highest quality lighting and complementary products at competitive prices, always keeping
                 the customer in mind. All of our products are made in America and molded by Elgin Molded
@@ -20,59 +20,55 @@
         </div>
     </section>
     
-    <section class="section--primary pinside80">
+    <section class="section--dark text-center pinside80">
         <div class="about-container">
         <div class="col-3 features">
             <i class="fa fa-bolt"></i>
-            <p>
-            Product so awesome. Makes you awesome - go buy!
-            </p>
+            <h3>
+            Elgin Molded
+            </h3>
+            <p>Where it all began (Custom Injection Molding)</p>
         </div>
         <div class="col-3 features">
             <i class="fa fa-bolt"></i>
-            <p>
-            Product so great. Makes you even greater - go buy now. Super cheap deal!
-            </p>
+            <h3>
+            Empco-Lite 
+            </h3>
+            <p>Airport, Marine, and Railroad Lighting</p>
         </div>
         <div class="col-3 features">
             <i class="fa fa-bolt"></i>
-            <p>
-            Feel lonely? Go buy product and have a friend! 
-            </p>
+            <h3>
+            AKT Corporation 
+            </h3>
+            <p>Highway & Traffic Lighting</p>
         </div>
         </div>
     </section>
-    
-    <section class="section--primary--alt pinside80">
-        <div class="about-container">
-        <h3>Mission Statement</h3>
+
+    <section class="bg-default text--center pinside80">
+        <h3>See how it all comes together</h3>
+        <a href="{{ url_for('sister_companies') }}" class="btn">Sister Companies</a>
+        </div>
+    </section>
+
+    <section class="grad-neutral text--center pinside80">
+        <div class="container">
+        <h3 class="grad-heading" >Mission Statement</h3>
         <p>The mission of Elgin Molded Plastics, Empco-Lite, and AKT Corporation is to fully satisfy the
             expectations of our customers by producing the highest quality products on time, each and every
             time, through the use of effective teamwork, employee involvement, and a dedication to excellence
             in everything we do with a view of continuous improvement.</p>
         </div>
     </section>
-    
-    <section class="section--primary--light">
-        <div class="about-container">
-        <blockquote class="testimonial">
-            <p> Empco-Lite takes the complexity out of quality lighting, while delivering an unmatched level of client service.</p>
-            <cite>
-            Scott Pedersen, Satisfied Customer of over 30 years
-            </cite>
-        </blockquote>
-        </div>
-    </section>
-    
-    
 
-    
     <section class="text--center">
         <div class="about-container">
         <h3>Dedicated to "Old World" Apprenticeship</h3>
         <a href="{{ url_for('process') }}" class="btn">Learn More</a>
         </div>
     </section>
+    
 </span>
   
 
