--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,21 +25,10 @@
         <ul class="navMenu">
             <li><a href="{{ url_for('index') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
-            <li><a href="{{ url_for('sister_companies') }}">Sister Companies</a></li>
+            <li><a href="{{ url_for('product_line') }}">Product Line</a>
             <li><a href="{{ url_for('contact') }}">Contact</a></li>
+            
 
-            <span id="products">
-            <li id="products"><a href="{{ url_for('product_line') }}">Product Line</a>
-            <!-- First Tier Drop Down -->
-            <ul id="products">
-                <li><a href="#">Airport</a></li>
-                <li><a href="#">Highway</a></li>
-                <li><a href="#">Marine</a></li>
-                <li><a href="#">Railroad</a></li>
-            </ul>        
-            </li>
-            </span>
-        </ul>
     </nav>
 
 
