--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 
-<div class="contact-grid">
+<div class="grid">
 
-    <div class="container pinside80">
+    <div class="container pinside30">
         <div class="meetteam">
             <h2>In Trusted Hands</h2>
             <span>Our expert sales team team provides real-world solutions that help you achieve your goals.</span>
