--- a/app/templates/lighting_types/highway_construction_lighting.html
+++ b/app/templates/lighting_types/highway_construction_lighting.html
@@ -3,7 +3,14 @@
 
 {% block content %}
 
-<div class="wrapper lighting-type"> 
+<section class="text--center grad-neutral">
+    <div class="container">
+        <h1 class="grad-heading">Highway Lighting</h1>
+        <p>We have ALL your lighting needs covered<p>
+    </div>
+</section>
+
+<div class="wrapper product-line"> 
     <h1>Highway Lighting</h1>
     <div class="cols">
         <a href="{{ url_for('model_630') }}">
@@ -28,13 +35,13 @@
                   <div class="container">
                       <div class="front" style="background-image: url(/static/56.jpg)">
                           <div class="inner">
-                              <p>Rocogged</p>
-                <span>Lorem ipsum</span>
+                              <p>No. 18 Center</p>
+                <span>Mount Delineator</span>
                           </div>
                       </div>
                       <div class="back">
                           <div class="inner">
-                              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                              <p>Part # No. 18</p>
                           </div>
                       </div>
                   </div>
@@ -43,13 +50,13 @@
                   <div class="container">
                       <div class="front" style="background-image: url(/static/95.jpg)">
                           <div class="inner">
-                              <p>Strizzes</p>
-                <span>Lorem ipsum</span>
+                              <p>567 Guardrail</p>
+                <span>Delineator</span>
                           </div>
                       </div>
                       <div class="back">
                           <div class="inner">
-                              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                              <p>Part # 567-1 (single side), 567-2 (double side)</p>
                           </div>
                       </div>
                   </div>
@@ -58,13 +65,13 @@
                   <div class="container">
                       <div class="front" style="background-image: url(/static/101.jpg)">
                           <div class="inner">
-                              <p>Clossyo</p>
-                <span>Lorem ipsum</span>
+                              <p>Bituminous Pavement</p>
+                <span></span>
                           </div>
                       </div>
                       <div class="back">
                           <div class="inner">
-                              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                              <p>Marker Adhesive</p>
                           </div>
                       </div>
                   </div>
@@ -73,13 +80,13 @@
                   <div class="container">
                       <div class="front" style="background-image: url(/static/56.jpg)">
                           <div class="inner">
-                              <p>Rendann</p>
-                <span>Lorem ipsum</span>
+                              <p>Butyl Pads</p>
+                <span></span>
                           </div>
                       </div>
                       <div class="back">
                           <div class="inner">
-                              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                              <p>for Pavement Markers</p>
                           </div>
                       </div>
                   </div>
@@ -88,13 +95,13 @@
                   <div class="container">
                       <div class="front" style="background-image: url(/static/56.jpg)">
                           <div class="inner">
-                              <p>Reflupper</p>
-                <span>Lorem ipsum</span>
+                              <p>Concrete Barrier Wall Marker</p>
+                <span></span>
                           </div>
                       </div>
                       <div class="back">
                           <div class="inner">
-                              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                              <p>Part # JD-1 (single side), JD-2 (double side)</p>
                           </div>
                       </div>
                   </div>
