--- a/app/templates/lighting_types/marine_lighting.html
+++ b/app/templates/lighting_types/marine_lighting.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-<div class="wrapper lighting-type"> 
+<div class="wrapper product-line"> 
     <h1>Marine Lighting</h1>
     <div class="cols">
         <a href="{{ url_for('model_630') }}">
@@ -132,5 +132,8 @@
               </div>
           </div>
    </div>
+
+
+
 
 {% endblock content %}
