--- a/app/templates/lighting_types/railroad_lighting.html
+++ b/app/templates/lighting_types/railroad_lighting.html
@@ -3,8 +3,9 @@
 
 {% block content %}
 
-<div class="wrapper lighting-type"> 
-    <h1>Airport Lighting</h1>
+
+<div class="wrapper product-line"> 
+    <h1>Railroad Lighting</h1>
     <div class="cols">
         <a href="{{ url_for('model_630') }}">
               <div class="col" ontouchstart="this.classList.toggle('hover');">
