--- a/app/templates/process.html
+++ b/app/templates/process.html
@@ -11,10 +11,10 @@
       </div>
       <div class="col-50">
         <article>
-          <h1>"Old World"</h1>
-          <h2>Skilled Labor</h2>
-            <p>Our tool makers have years of experience founded on the principles learned in the tradition of "Old World" apprenticeship and training. 
-            These tool makers also utilize CNC and EDM technology to produce quality injection molds. With their backgrounds in mold construction and exceptional pride in their work, our people have gained respect and earned a reputation of knowing the expertise required to meet the demand of our customers.
+          <h1>Our Process</h1>
+          <h2>"Old World" Skilled Labor</h2>
+            <p>Our tool makers have years of experience,  founded on the principles learned in the tradition of "Old World" apprenticeship and training. 
+            These tool makers also utilize CNC and EDM technology to produce quality injection molds. With their backgrounds in mold construction and exceptional pride in their work, our people have gained respect and earned a reputation of embodying the expertise required to meet the demand of our customers.
             </p>          
         </article>
       </div>
