--- a/app/templates/sister_companies.html
+++ b/app/templates/sister_companies.html
@@ -3,12 +3,13 @@
 
 {% block content %}
 
-<section class="text--center bg-primary">
-    <div class="about-container">
-    <h3>Sister Companies</h3>
-    <p>Since 1949...Expertise, Technology, Quality</p>
-    <p class='pdl80 pdr80' > Elgin Molded Plastics has grown from three employees in a small garage-like 750 square feet structure to 50 employees with three facilities totally 85,000 square feet. AKT Corporation and Empo-Lite were formed through popular demand. </p>
-    </div>
+
+    <div class="about-container grad-primary pinside30 mb20 text--center">
+    <h3 class="uppercase">Sister Companies</h3>
+    <p class="subheading">Expertise, Technology, Quality ... since 1949</p></div>
+<section class="text--center neutral-primary">
+    <p class='pdl80 pdr80' > It all started with a few hard-working people with a vision, working in a small, garage-like, 750 square-foot structure. In 1949, Elgin Molded Plastics was born. Their goal was to produce the highest quality products on time, each an everytime. Dedication to excellence led to success, especially in the lighting industry. Empco-Lite was founded in 1968, making airline, construction, railroad, and marine lighting products available to customers. Once again, dedication to excellence led to success, and there was a need to create a company soley focused on highway/construction lighting. In 1978, AKT Construction was formed.</p>
+    <p class='pdl80 pdr80'>We believe in continuous improvement. We have been industry leaders for over 75 years because we have evolved with the times. We are very proud to be a woman-owned business. We also attribute our success to a dedication of excellence that our founders had. All of our products are made in America, right in our plant. We are a family-owned business, and believe that all of our customers should be treated like family too. </p>
 </section>
 
 <section class="about">
@@ -30,9 +31,9 @@
         <img src="/static/1.jpg" alt="" class="details-img--ball"/>
     </div>
     <div class="col-7 details">
-        <h3>Elgin Molded</h3>
-        <p>Elgin Molded Plastics, in Elgin, IL, has 19 injection molding presses ranging from 85 ton to 500 ton.  Many have expanded platens and fixed with robots.</p>
-        <a href="https://elginmolded.com/index.html" class="btn">Learn More</a>
+        <h3>Empco-Lite</h3>
+        <p>Empco-Lite has been involved in the traffic safety industry since the 1968. Dedication to excellence led to success, especially in the lighting industry. Empco-Lite was founded in 1968, making airline, construction, railroad, and marine lighting products available to customers. </p>
+            <a href="{{ url_for('index') }}" class="btn">Home</a>
     </div>
     </div>
 </section>
@@ -43,15 +44,14 @@
         <img src="/static/1.jpg" alt="" class="details-img--ball"/>
     </div>
     <div class="col-7 details">
-        <h3>Empco-Lite</h3>
-        <p>Empco-Lite has been involved in the traffic safety industry since the 1960’s. Our goal is to provide
-            the highest quality lighting and complementary products at competitive prices, always keeping
-            the customer in mind. All of our products are made in America and molded by Elgin Molded
-            Plastics.</p>
-            <a href="{{ url_for('index') }}" class="btn">Home</a>
+        <h3>Elgin Molded</h3>
+        <p>Elgin Molded Plastics, founded over 70 years ago, now has 19 injection molding presses ranging from 85 ton to 500 ton.</p>
+        <a href="https://elginmolded.com/index.html" class="btn">Learn More</a>
     </div>
     </div>
 </section>
+
+
 
 
 
