--- a/app/static/main.css
+++ b/app/static/main.css
@@ -104,7 +104,7 @@ li > a:only-child:after { content: ''; }
 }
 
 .navbar li a{
-    color: #222831;
+    color: rgba(0, 0, 0, 0.506);
     text-decoration: none;
     padding: 10px 20px;
     margin: 2px;
@@ -113,15 +113,12 @@ li > a:only-child:after { content: ''; }
 }
 
 .navbar li a:hover{
-    background: #F2CB05;
-    color: #fff;
+    background: #f2e74b; 
+    color: black;  
     border-radius: 50px;
 }
 
-.navbar #products li a:hover{
-    background: none; 
-    color: black;
-}
+
 
 .topBar .toggle{
     display: none;
@@ -359,7 +356,7 @@ footer ul {
 
 
 /* 1.  */
-/* INDEX HERO IMAGE  */
+/* HERO IMAGE  */
 /* Lighting Types: AIRPORT , HIGHWAY, MARINE, RAILROAD  */
 
 
@@ -454,13 +451,13 @@ footer ul {
   }
   
       
-  .accordion ul li:nth-child(1) { background-image: url("/static/86.jpg"); background-position: center center; background-size:cover;}
+  .accordion ul li:nth-child(1) { background-image: url("/static/airport_lighting/104.jpg"); background-position: center center; background-size:cover;}
   
   .accordion ul li:nth-child(2) {  background-image: url("/static/1.jpg"); background-position: center center; background-size:cover;}
   
   .accordion ul li:nth-child(3) {  background-image: url("/static/95.jpg"); background-position: center center; background-size:cover;}
   
-  .accordion ul li:nth-child(4) { background-image: url("/static/69.jpg"); background-position: top right; background-size:cover;}
+  .accordion ul li:nth-child(4) { background-image: url("/static/78.jpg"); background-position: top right; background-size:cover;}
   
   
   .accordion ul:hover li { width: 15%; }
@@ -478,6 +475,25 @@ footer ul {
   }
 
 
+  /* Why People choose us  */
+
+  .subheading{
+    font-style: italic;
+    font-size: 23px;
+    color:rgba(0, 0, 0, 0.501);
+    margin-top: 20px;   
+  }
+
+  .our-structure{
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(242,231,75,1) 100%);
+  }
+
+
+/* ABOUT  */
+
+
+
 
 
 
@@ -485,7 +501,7 @@ footer ul {
 
   /* PRODUCT LINE  */
 
-  .product-line .wrapper h1{
+  .wrapper h1{
     font-size: 2.5rem;
     font-family: 'Open Sans';
     font-weight: normal;
@@ -494,8 +510,8 @@ footer ul {
     margin: 2rem 0;
   }
   
-  .product-line .wrapper{
-    width: 90%;
+   .wrapper{
+    width: 100%;
     margin: 0 auto;
     max-width: 80rem;
   }
@@ -672,8 +688,41 @@ footer ul {
     }
   }
 
+/* PRODUCT DESCRIPTION */
 
+.product-description{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px; 
+}
 
+.model{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  font-size: 25px; 
+}
+
+.part-number{
+  font-family: 'Open Sans', sans-serif;
+  font-style: italic;
+  color: gray; 
+}
+
+.specification{
+  font-family: 'Roboto', sans-serif;
+  font-weight:800;
+}
+
+.specifications{
+  font-family: 'Roboto', sans-serif; 
+}
+
+.right {
+  position: absolute;
+  right: 10px;
+  border: none; 
+  padding: 10px;
+  opacity: 60%; 
+}
 
 
 
@@ -800,7 +849,7 @@ footer ul {
     color: #888;
   }
 
-  .contact-grid{
+  .grid{
       display: grid; 
       grid-template-columns: 1fr 1fr; 
   }
@@ -906,12 +955,33 @@ footer ul {
 
     /* TEST */
   
+.flex-row{
+  display: flex; 
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+}
 
+
+
+
+  .complimentary{
+    text-transform: uppercase;
+    color: black;  
+    background: rgb(255,255,255);
+    background: radial-gradient(circle, rgba(255,255,255,0.8982186624649859) 0%, rgba(242,231,75,1) 80%);
+    margin: 0px;
+    padding: 20px;  
+  }
+
+  
     
     /*----------------
     margin space
     -----------------*/
-    
+    .uppercase{
+      text-transform: uppercase;
+    }
     .mb0 { margin-bottom: 0px; }
     .mb10 { margin-bottom: 10px; }
     .mb20 { margin-bottom: 20px; }
@@ -928,6 +998,8 @@ footer ul {
     .mt60 { margin-top: 60px; }
     .mt80 { margin-top: 80px; }
     .mt100 { margin-top: 100px; }
+
+    .mr50 {margin-right: 50px;}
     
     /*----------------
     less margin space from top
@@ -993,14 +1065,30 @@ footer ul {
     /*-----------------------------------------
     Background & Block color 
     ------------------------------------------*/
-    .bg-light { background-color: #F2AF88; color: black;  }
-    .bg-primary { background-image: linear-gradient(15deg, #F2F2F2 0%, white 150%); }
-    .bg-default { background-color: white; color: #F2B705; }
+    .grad-primary{
+      color: black;  
+      background: rgb(255,255,255);
+      background: radial-gradient(circle, rgba(255,255,255,0.8982186624649859) 0%, rgba(242,231,75,1) 80%); 
+    }
+    .grad-neutral{
+      background: rgb(255,255,255);
+      background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(198,196,192,0.8085828081232493) 100%);
+    }
+    .grad-heading{
+      background: rgb(255,255,255);
+      background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(170,169,168,1) 100%);
+      text-transform: uppercase;
+      padding: 20px;  
+    }
+    .bg-light { background-color: black; color: white;  }
+    .neutral-primary{background-color: whitesmoke; color: black;}
+    .bg-primary { background-image: linear-gradient(15deg, #F2F2F2 0%, #f2e74b 150%); }
+    .bg-default { background-color: white; color: black; }
     .bg-white { background-color: #fff; }
     .outline { border: 1px solid white;  }
-    .small-title { font-size: 14px; color: #F2B705; font-weight: 500; }
-    .big-title { font-size: 36px; font-weight: 600; color: #F2B705; }
-    .capital-title { text-transform: uppercase; font-size: 16px; font-weight: 600; }
+    .small-title { font-size: 14px; color: #f2e74b; font-weight: 500; }
+    .big-title { font-size: 36px; font-weight: 600; color: white; }
+    .capital-title { text-transform: uppercase; font-size: 36px; font-weight: 600; color: black; }
     .bdr-btm { }
     .green-text { }
     .bg-boxshadow { -webkit-box-shadow: 0px 4px 16px 3px rgba(230, 216, 136, 0.5); -moz-box-shadow: 0px 4px 16px 3px rgba(213, 221, 234, .5); box-shadow: 0px 4px 16px 3px rgba(213, 221, 234, .5); }
@@ -1026,7 +1114,7 @@ footer ul {
 
     .hero-section{
         align-items: flex-start;
-        background-image: linear-gradient(15deg, #F2F2F2 0%, white 150%);
+        background-image: white; 
         display: flex;
         min-height: 100%;
         justify-content: center;
@@ -1097,14 +1185,6 @@ footer ul {
         padding: 1rem;
         position: absolute;
         top: 0;
-      }
-      
-      .card__category{
-        color: rgb(218, 214, 214);
-        font-size: 0.9rem;
-        margin-bottom: 1rem;
-        text-transform: uppercase;
-
       }
       
       .card__heading{
@@ -1188,12 +1268,24 @@ a {
     }
   }
   section.section--primary {
-    background: #F2B705; 
+    background: #F2E74B;
     color: #fff;
   }
+
+  section.section--dark{
+    background:rgba(0, 0, 0, 0.927); 
+    color: white; 
+  }
+
+  section.section-white{
+    background: white; 
+    color: black; 
+  }
+
   section.section--primary--alt {
-    background:#F2B705; 
-    color: #fff;
+    background:#f2e74bd6;
+    color: black; 
+    border: none;  
   }
   section.section--primary--light {
     background: rgba(0, 126, 206, 0.1);
@@ -1434,7 +1526,20 @@ blockquote cite:before {
   .btn:hover{
     background-color: white; 
     color: black; 
-    border: 2px solid #F2CA80; 
+    border: 2px solid #f2e74b;
+  }
+
+  .btn-1{
+    border: 2px solid white;
+    background: white;
+    color: black; 
+    text-transform: uppercase; 
+  }
+
+  .btn-1:hover{
+    background: #f2e74bc6;
+    border: none; 
+    color: white; 
   }
   
   .col-50,
